@@ -426,6 +426,7 @@ src/libnxcl/main.cpp -text
 src/libnxcl/mib.cpp -text
 src/libnxcl/misc.cpp -text
 src/libnxcl/objects.cpp -text
+src/libnxcl/snmptrap.cpp -text
 src/libnxcl/users.cpp -text
 src/libnxsnmp/ber.cpp -text
 src/libnxsnmp/libnxsnmp.dsp -text
